--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "vue": "^2.2.6",
-    "vue-router": "^2.3.1",
-    "iview": "^2.0.0-rc.13",
     "axios": "^0.16.2",
-    "vuex": "^2.2.1",
-    "vue-axios": "^2.0.2"
+    "iview": "^2.0.0-rc.13",
+    "npm": "^6.0.1",
+    "vue": "^2.2.6",
+    "vue-axios": "^2.0.2",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^2.8.1",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
